# grit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  release-please-config.json
.github/workflows/: ci.yml  next-release.yml  pr-target-check.yml  release-please.yml  release.yml
assets/: bench_data.json
docs/: RELEASE_FLOW.md
scripts/: README.md
scripts/ai-agents/: bench.sh
scripts/lib/: common.sh
scripts/sweep/: bench.sh
scripts/synthetic/: bench.sh
scripts/throughput/: bench.sh
src/: config.rs
src/cli/: mod.rs
src/db/: azure_store.rs  lock_store.rs  mod.rs  s3_store.rs  sqlite_store.rs
src/git/: mod.rs
src/parser/: mod.rs
tests/: union_dedup_contract.rs
