[package]
name = "grit"
version = "0.4.0"
edition = "2021"
description = "Coordination layer for parallel AI agents on top of git"
keywords = ["git", "ai-agents", "experimental", "ast", "coordination"]
categories = ["development-tools", "command-line-utilities"]
license = "Apache-2.0"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# AST parsing
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"

# Time
chrono = "0.4"

# Async (for S3 runtime)
tokio = { version = "1", features = ["rt-multi-thread"] }

# Glob for file discovery
glob = "0.3"

# Colors in terminal
colored = "2"

# Cloud storage (S3/R2/GCS/Azure)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
urlencoding = "2"

# Azure Blob Storage (native API with conditional writes + Event Grid)
azure_core = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"

# Stream/async utilities (for Azure blob list)
futures = "0.3"

[dev-dependencies]
tempfile = "3"
